@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-07T00:36:18Z",
+  "timestamp" : "2022-04-07T08:09:47Z",
   "count_outdated" : 590,
   "uniques_outdated" : 37,
-  "count" : 930,
-  "uniques" : 52,
+  "count" : 931,
+  "uniques" : 53,
   "views" : [
     {
       "timestamp": "2022-03-24T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-04-06T00:00:00Z",
       "count": 7,
       "count_minmax": [ 0, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
