@@ -1,3 +1,9 @@
+2022-04-07T08:09:47Z:
+* notice: last 14d: all unq: 341 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 590 37 / 930 52
+* notice: next accum: outdated-all outdated-unq / all unq: 590 37 / 931 53
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +7 / -0 -0
+
 2022-04-07T00:36:18Z:
 * notice: last 14d: all unq: 340 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 547 36 / 889 52
